--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,3 +5,5 @@ jobs:
       - image: circleci/ruby:2.3.4-node-browsers
     steps:
       - checkout
+      - run: sleep 180
+      - run: echo "Done"
